--- a/client/src/components/Heading/Heading.module.css
+++ b/client/src/components/Heading/Heading.module.css
@@ -1,14 +1,16 @@
 :root{
-    --color-base: #fff;
-    --color-contraste:#36333c;
+    --color-base: #36333c;
+    --color-contraste:#fff;
+    --color-contraste-naranja: #fe9f02;
 }
 
 section{
-    background: var(--color-contraste);
+    margin:0 100px 100px 100px;
+    background: var(--color-base);
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
-    color: white;
+    color: var(--color-contraste);
 }
 
 article{
@@ -35,24 +37,24 @@ a{
     text-decoration: none;
 }
 
-.btn {
-    background: var(--color-contraste); 
-    color: var(--color-base); 
-    border: 2px solid var(--color-base); 
+.btnLink {
+    background: var(--color-base); 
+    color: var(--color-contraste); 
+    border: 2px solid var(--color-contraste-naranja); 
     padding: 10px 15px;
     position: relative;
     z-index: 1;
     overflow: hidden;
     display: inline-block;
-}
-
-.btn:hover{
-    color: var(--color-contraste);
-}
-
-.btn::after {
+  }
+  
+  .btnLink:hover{
+    color: var(--color-base);
+  }
+  
+  .btnLink::after {
     content: "";
-    background: var(--color-base); 
+    background: var(--color-contraste-naranja); 
     position: absolute;
     z-index: -1;
     padding: 16px 20px;
@@ -63,13 +65,15 @@ a{
     bottom: 0;
     transform: skewX(-45deg) scale(0, 1);
     transition: all 0.5s ease;
-}
-
-.btn:hover::after {
+  }
+  
+  .btnLink:hover::after {
     color: var(--color-contraste);
     transition: all 0.5s ease-out;
     transform: skewX(-45deg) scale(1, 1);
-}
+  }
+
+
 
 aside img {
     height: auto;
