--- a/client/src/components/Login-Logout/LoginLogout.module.css
+++ b/client/src/components/Login-Logout/LoginLogout.module.css
@@ -1,8 +1,24 @@
 .loginBtn {
 	padding: 0.6rem 1.2rem;
-	background-color: orange;
 	color: white;
-	border: 1px solid transparent;
+	border: 1px solid #fe9f02;
+}
+.loginBtn{
+    --color: #fe9f02;
+    --hover: #E5FFDE;
+    background: linear-gradient(60deg, transparent 50%, var(--hover) 50%);
+    background-size: 300%;
+    background-position: 0 0;
+    transition: background-position 1s, color 1s;
+    
+}
+
+.loginBtn:hover {
+    background-position: 100% 0;
+    color: black;
+    border-color: var(--color);
+    cursor: pointer;
+    
 }
 
 .logoutBtn {
