--- a/client/src/views/PerfilUsuario/PerfilUsuario.module.css
+++ b/client/src/views/PerfilUsuario/PerfilUsuario.module.css
@@ -1,3 +1,7 @@
+.container{
+  display: flex;
+  flex-direction: column;
+}
 .gridObrasArte {
     display: grid;
     grid-template-columns: repeat(auto-fill, 300px);
@@ -10,6 +14,48 @@
 
   .containerInfo{
     display : flex;
-    flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
   }
+
+  .containerUsuario{
+    display: flex;
+    width: 50%;
+    justify-content: flex-end;
+    padding: 90px;
+  }
+
+  .contacto{
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+  }
+
+  .imagenPerfil{
+    width: 250px;
+    border-radius: 100px;
+    border: 5px solid #fe9f02
+  }
+
+  .title{
+   display: flex;
+   justify-content: center;
+   margin-bottom: 70px;
+  }
+
+  .editPerfil{
+    display: flex;
+    align-items: center;
+  }
+
+ .button{
+   border: 1px solid #fe9f02;
+   height: 30px;
+   width: 100px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+  border-radius: 5px;
+ }
