--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -23,6 +23,14 @@
     align-items: center;
     min-width: 305px;
     border-radius:15px;
+    justify-content: space-between;
+    
+}
+
+.container:hover{
+    opacity: 0.7;
+    border: 5px solid #fe9f02;
+    cursor: pointer;
 }
 .containerImg{
     width: 300px;
@@ -39,7 +47,8 @@
     background: white;
     width: 300px;
     display: flex;
-    justify-content: space-around
+    justify-content: space-around;
+
 }
 
 .imagen{
