--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -12,6 +12,7 @@
     width: 250px;
     border-radius: 8px;
     margin-bottom: 20px;
+    border:2px solid #fe9f02;
 }
 
 .p{
@@ -23,10 +24,12 @@
     align-items: center;
     justify-content: space-between;
     width: 400px;
+    
 }
 
 .select{
     height: 30px;
     width: 150px;
     border-radius: 8px;
+    border: 2px solid #fe9f02;
 }
