--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -1,12 +1,15 @@
 .headerCard{
     display: flex;
     width: 300px;
-    justify-content: space-between
+    justify-content: space-between;
 }
+
 
 .title{
     font-size: 1.7rem;
     margin-bottom: 0;
+    font-family: var(--font-title);
+    
 }
 .p{
     margin: 0
@@ -16,27 +19,33 @@
 }
 
 .container{
-    border: 5px solid white;
+    border: 1.5px solid orange;
     padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     min-width: 305px;
-    border-radius:15px;
     justify-content: space-between;
+    font-family: var(--font-text);
+    transition: 0.75s all ease-in-out;
     
 }
 
 .container:hover{
     opacity: 0.7;
-    border: 5px solid #fe9f02;
+    border: 1.5px solid whitesmoke;
     cursor: pointer;
+    transform: scale(1.20);
 }
 .containerImg{
     width: 300px;
     display: flex;
     justify-content: center;
-    margin-top: 20px;;
+    margin-top: 5px;
+    transition: 0.75s all ease-in-out;
+}
+.containerImg:hover{
+    transform: scale(1.25);
 }
 
 .titleContainer{
@@ -44,7 +53,7 @@
 }
 
 .containerIcons{
-    background: white;
+    background: #f3deb5;
     width: 300px;
     display: flex;
     justify-content: space-around;
@@ -61,5 +70,5 @@
 }
 
 .like:hover{
-    color: firebrick
+    color: firebrick;
 }
