ordenamiento por likes agregado

--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -17,13 +17,15 @@
 
 .p{
     margin: 0;
+    width: 140px;
+    margin-right: 10px;
 }
 
 .containerSelect{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 400px;
+    width: 450px;
     
 }
 
