soluciona errores en el menu de mobile

--- a/client/src/components/MenuMobile/MenuMobile.module.css
+++ b/client/src/components/MenuMobile/MenuMobile.module.css
@@ -5,6 +5,7 @@
 	left: 0;
 	right: 0;
 	background-color: white;
+	color: black;
 	display: grid;
 	place-content: center;
 	animation: toggleMenu 0.3s ease-in-out;
