--- a/client/src/views/PerfilUsuario/PerfilUsuario.module.css
+++ b/client/src/views/PerfilUsuario/PerfilUsuario.module.css
@@ -1,6 +1,7 @@
 .container{
   display: flex;
   flex-direction: column;
+  position:relative;
 }
 .gridObrasArte {
     display: grid;
@@ -14,27 +15,23 @@
 
   .containerInfo{
     display : flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-
-  .containerUsuario{
-    display: flex;
-    width: 50%;
-    justify-content: flex-end;
-    padding: 90px;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
+    margin-bottom: 30px;
   }
 
   .contacto{
     display: flex;
-    width: 50%;
     flex-direction: column;
   }
 
   .imagenPerfil{
+    aspect-ratio: 1/1;
+    object-fit: cover;
     max-height: 200px;
-    border-radius: 100px;
-    border: 5px solid #fe9f02
+    border-radius: 50%;
+    border: 2px solid #fe9f02
   }
 
   .title{
