--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -36,17 +36,39 @@
   margin-top: 80px;
 }
 
-.btnPaginado{
-  width: 120px;
 
+.paginationBttns {
+  height: 40px;
+  list-style: none;
+  display: flex;
+  justify-content: center;
 }
 
-.btnPaginado:hover{
+.paginationBttns a {
+  padding: 10px;
+  margin: 8px;
+  border-radius: 5px;
+  border: 1px solid #fe9f02;
+  color: #fe9f02;
   cursor: pointer;
 }
 
-.numeroPagina{
-  margin: 0 40px 0 40px
+.paginationBttns a:hover {
+  color: white;
+  background-color: #fe9f02;
 }
 
+.paginationActive a {
+  color: white;
+  background-color: #fe9f02;
+}
+
+.paginationDisabled a {
+  color: #000000;
+  background-color: #fe9f02;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
 
