--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -36,6 +36,9 @@
   margin-top: 80px;
 }
 
+.containerPaginate{
+  margin-top: 50px;
+}
 
 .paginationBttns {
   height: 40px;
@@ -47,7 +50,6 @@
 .paginationBttns a {
   padding: 10px;
   margin: 8px;
-  border-radius: 5px;
   border: 1px solid #fe9f02;
   color: #fe9f02;
   cursor: pointer;
