--- a/client/src/components/Loader/Loader.module.css
+++ b/client/src/components/Loader/Loader.module.css
@@ -4,6 +4,8 @@
 	background-color: whitesmoke;
 	display: grid;
 	place-content: center;
+	animation: opacityLoader 0.3s ease-out;
+	animation-delay: 3.5s;
 }
 
 .skFoldingCube {
@@ -108,6 +110,15 @@
 	100% {
 		-webkit-transform: perspective(140px) rotateY(180deg);
 		transform: perspective(140px) rotateY(180deg);
+		opacity: 0;
+	}
+}
+
+@keyframes opacityLoader {
+	0% {
+		opacity: 1;
+	}
+	100% {
 		opacity: 0;
 	}
 }
