--- a/client/src/views/AgregarObraArte/AgregarObraArte.module.css
+++ b/client/src/views/AgregarObraArte/AgregarObraArte.module.css
@@ -1,41 +1,131 @@
 .container{
+    margin-right: 10px;
+    margin-left: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .containerForm {
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap:2rem;
+}
+
+.containerBlocks{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap:2rem;
+
+}
+
+.containerInputs{
+    display:grid;
+    align-content: flex-start;
+}
+
+.containerInputs > label{
+    margin-right: 1em;
 }
 
 .input{
+    font-family: var(--font-text);
+    font-size: 15px;
     height: 25px;
     width: 250px;
-    border-radius: 8px;
     margin-bottom: 20px;
-    border:2px solid #fe9f02;
+    outline: none;
+    background: none;
+    box-shadow: none;
+    border-style: solid var(--background-color);
+    border-bottom:2px solid var(--color-contraste1);
+    background-color: var(--background-color);
+    color:white;
+}
+
+/* .containerFecha{
+    display: flex;
+    align-items: center;
+} */
+
+.inputDate{
+    font-family: var(--font-text);
+    font-size: 15px;
+    height: 25px;
+    width: 150px;
+    outline: none;
+    background: none;
+    box-shadow: none;
+    border-style: solid var(--background-color);
+    border-bottom:2px solid var(--color-contraste1);
+    background-color: var(--background-color);
+    color:white;
 }
 
 .containerFecha{
-    display: flex;
-    align-items: center;
+    width: 250px;
+    align-content: center;
+    display: grid;
+    margin-bottom: 18px;
 }
 
-.inputDate{
-    height: 25px;
-    width: 150px;
-    border-radius: 8px;
-    border:2px solid #fe9f02;
+.containerInputFile{
+    border: 2px solid var(--color-contraste);
+    padding: 5px;
 }
-.p{
-    margin-right: 10px;
+
+.containerInputFile:hover{
+    border: 2px solid var(--color-contraste1);
+    
+}
+
+.inputFile {
+    position: relative;
+    display: inline-block;
+}
+
+
+.inputFile::before{
+    color: var(--font-text);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    content: 'Seleccione su archivo'; /* testo por defecto */
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.inputFile input[type="file"] {
+    opacity: 0;
+    width: 200px;
+    height: 32px;
+    display: inline-block;
+}
+
+.containerImage{
+    align-self: center;
 }
 
 .buttonSubmit{
-    height: 35px;
-    width: 80px;
-    border-radius: 8px;
+    background: none;
+    font-family: var(--font-text);
+    font-size: 20px;
+    padding:10px 20px 10px 20px;
+    color: var(--color-contraste);
+    /* height: 35px;
+    width: 80px; */
+    align-self: center;
     margin-bottom: 20px;
-    border:2px solid #fe9f02;
+    border:2px solid var(--color-contraste1);
+}
+
+.buttonSubmit:hover{
+    cursor:pointer;
+    border:2px solid var(--color-contraste);
 }
