--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -1,37 +1,53 @@
 .container{
     display: flex;
+    justify-content:space-evenly;
+    flex-wrap: wrap;
     align-items: center;
     height: 100px;
-    flex-direction: column;
-    margin-bottom: 50px;
-    margin-top: 10px;
 }
 
 .input{
+    margin-left: 10px;
     height: 25px;
-    width: 250px;
-    border-radius: 8px;
-    margin-bottom: 40px;
-    border:2px solid #fe9f02;
+    width: 200px;
+    font-size: 15px;
+    background: var(--background-color);
+    outline: none;
+    border-left: none;
+    border-top: none;
+    border-right: none;
+    border-bottom: 1px solid #fe9f02;
+    color: var(--color-contraste);
 }
 
 
 .p{
     margin: 0;
     width: 90px;
-    margin-right: 10px;
 }
 
 .containerSelect{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     width: 450px;
 }
 
 .select{
-    height: 30px;
+    margin-left: 10px;
+    height: 25px;
     width: 150px;
-    border-radius: 8px;
-    border: 2px solid #fe9f02;
+    font-size: 15px;
+    background: var(--background-color);
+    outline: none;
+    border-left: none;
+    border-top: none;
+    border-right: none;
+    border-bottom: 1px solid #fe9f02;
+    color: var(--color-contraste);
+}
+
+.select:hover{
+    cursor: pointer;
 }
