--- a/client/src/components/MenuMobile/MenuMobile.module.css
+++ b/client/src/components/MenuMobile/MenuMobile.module.css
@@ -5,7 +5,7 @@
 	left: 0;
 	right: 0;
 	z-index: 1000;
-	background-color: white;
+	background-color: #413f44;
 	color: black;
 	display: grid;
 	place-content: center;
@@ -23,7 +23,8 @@ ul li {
 }
 
 .link {
-	color: black;
+	color: rgb(255, 255, 255);
+	font-size: 1.6rem;
 }
 
 .link:active {
