--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -72,9 +72,10 @@
 }
 
 .like{
-    color:rgb(54, 54, 54);
+    color:rgb(0, 0, 0)
+}
+.like2{
+    color:firebrick
 }
 
-.like:hover{
-    color: firebrick;
-}
+
