--- a/client/src/views/informacionObraArte/InformacionObraArte.module.css
+++ b/client/src/views/informacionObraArte/InformacionObraArte.module.css
@@ -1,44 +1,55 @@
-.container{
-    width:100%;
-    display:flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.containerImagen{
-    width:600px;
-    
+.containerImagen {
+  width: 600px;
 }
 
-.imagen{
-    width:100%;
-    box-shadow: 10px 10px 100px rgba(128, 128, 128, 0.548);
+.imagen {
+  width: 100%;
+  box-shadow: 10px 10px 100px rgba(128, 128, 128, 0.548);
 }
 
-.containerHeader{
-    align-self: center;
-    justify-self: center;
-    display: flex;
-    flex-direction:row;
-    justify-content: space-around;
-    width:50%;
-    padding: .5rem;
+.containerHeader {
+  align-self: center;
+  justify-self: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 50%;
+  padding: 0.5rem;
 }
 
-.containerInfo{
-    width: 50%;
-    
+.containerInfo {
+  width: 50%;
 }
 
-.titles{
-    display: inline-block;
-    width:auto;
-    border-bottom: 1px solid var(--color-contraste1);
-    margin-bottom: 0;
+.titles {
+  display: inline-block;
+  width: auto;
+  border-bottom: 1px solid var(--color-contraste1);
+  margin-bottom: 0;
 }
 
-.description{
-    margin-left: 50px;
+.description {
+  margin-left: 50px;
+}
+
+.link {
+  color: white;
+}
+
+.link:hover {
+  font-size: 1.2rem;
+}
+
+.containerButton {
+  align-self: flex-start;
+  margin-left: 450px;
 }
